fix display issue on mobile

--- a/frontend/Client/Layout/MainLayout.razor.css
+++ b/frontend/Client/Layout/MainLayout.razor.css
@@ -7,7 +7,7 @@
 
 .content {
     background-color: #E9E9E7;
-    height: 100%;
+    height: 100vw;
 }
 
 main {
